Added support for a classes directory on the classpath from the runtime and compnent directories; fixed bug with classpath:// not using the cached ClassLoader from ExecutionContextFactoryImpl